--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -115,7 +115,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/site-reliability-engineer-bVsfdSRWir6B52aKkRyNN8'>Site Reliability Engineer #5073 job at Avispa Technology in Sunnyvale, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/site-reliability-engineer-bVsfdSRWir6B52aKkRyNN8'>Site Reliability Engineer #5073 job at Avispa Technology in Sunnyvale, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -123,7 +123,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pagerduty/2c8d3530-5397-48f4-9c7a-eda7e788aaa6'>PagerDuty - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/pagerduty/2c8d3530-5397-48f4-9c7a-eda7e788aaa6'>PagerDuty - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... You architect, build, and automate the cloud production infrastructure on which 
 PagerDuty runs. You partner with Engineering stakeholders to design and deliver
@@ -187,7 +187,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 environnement agile et sur des projets SaaS. Expertise JavaScript et id?alement 
 NodeJS.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oPhcafwc&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n50bRKwm'>ServiceNow Careers - Site Reliability Manager, SRE</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oPhcafwc&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n50bRKwm'>ServiceNow Careers - Site Reliability Manager, SRE</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
@@ -280,11 +280,11 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999691988371-senior-site-reliability-engineer'>Prospect Infosys Inc. Senior Site Reliability Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999691988371-senior-site-reliability-engineer'>Prospect Infosys Inc. Senior Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4361604002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4361604002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -388,7 +388,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/ym19jr8wig566et8cd8b3ew54e'>Site Reliability Engineer  | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/ym19jr8wig566et8cd8b3ew54e'>Site Reliability Engineer  | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -408,7 +408,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1773848'>Job Application for Site Reliability Engineer, IAMS at Box</a></h5> 
+<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1773848'>Job Application for Site Reliability Engineer, IAMS at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -416,7 +416,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/9718ae15-ddbe-45e3-a396-5b2e55f9d32f'>Carta - Senior+ Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/9718ae15-ddbe-45e3-a396-5b2e55f9d32f'>Carta - Senior+ Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -454,7 +454,7 @@ Identity?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vinted/ea89a8c9-0dad-4909-871d-be7cfe715403'>Vinted - Site Reliability Engineer &amp; Team Lead</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vinted/ea89a8c9-0dad-4909-871d-be7cfe715403'>Vinted - Site Reliability Engineer &amp; Team Lead</a></h5> 
 <p><span class="badge badge-light">Vilnius</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
