--- a/biostatistics.html
+++ b/biostatistics.html
@@ -47,7 +47,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/63EAB3A165'>Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/juullabs/jobs/1794940'>Job Application for Biostatistician  at JUUL Labs</a></h5> 
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -135,7 +135,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oprAafwk'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -159,7 +159,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/olqAafwf'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/olqAafwf'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -219,7 +219,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://celerion.applicantstack.com/x/detail/a2mzq2vhdipo'>Biostatistician - Celerion</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://celerion.applicantstack.com/x/detail/a2mzq2vhdipo'>Biostatistician - Celerion</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Celerion is looking for a Biostatistician to join our global Data Management and 
 Biometrics team in Belfast, Northern Ireland. This role is responsible for the?...</p>
@@ -264,7 +264,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://glpg.recruitee.com/o/biostatistician-mechelenbe-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/biostatistician-mechelenbe-2'>
       Biostatistician - Mechelen,BE - Galapagos
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -298,7 +298,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">Montreal Boston Montreal Toronto</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29858'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29858'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -376,13 +376,13 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-10</p>
 <hr/>
-<h5><a href='http://targethealth.recruiterbox.com/jobs/fk0jh4j'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://targethealth.recruiterbox.com/jobs/fk0jh4j'>
     Biostatistician at Target Health Inc
 </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-06-09</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/lead-biostatistician-canada-29491'>Lead Biostatistician - Canada - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/lead-biostatistician-canada-29491'>Lead Biostatistician - Canada - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-06-08</p>
 <hr/>
@@ -439,7 +439,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oa1w9fwA'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oa1w9fwA'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
@@ -455,7 +455,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://agn.referrals.selectminds.com/jobs/machine-learning-engineer-biostatistics-9185'>Machine Learning Engineer, Biostatistics - Allergan Careers</a></h5> 
+<h5><a href='https://agn.referrals.selectminds.com/jobs/machine-learning-engineer-biostatistics-9185'>Machine Learning Engineer, Biostatistics - Allergan Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
